# core

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ASYNC_PROCESSING_EXAMPLES.md  BORDER_FLOW_IMPLEMENTATION_SUMMARY.md  BRANDING_GUIDE.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CLOUD_INTEGRATION_COMPLETION_REPORT.md  CLOUD_INTEGRATION_EXAMPLES.md  CONTRIBUTING.md  CONTRIBUTOR_ONBOARDING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_SERVE_STATUS.md  PERFORMANCE_OPTIMIZATION_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_EXAMPLES.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PLUGIN_EVALUATION_REPORT.md  QGIS_PLUGIN_EVALUATION_REPORT.md  RASTER_USAGE_EXAMPLES.md  README.md  SERVE_IMPLEMENTATION_SUMMARY.md  SHOWCASE_GALLERY.md  SHOWCASE_IMPLEMENTATION_SUMMARY.md  SHOWCASE_METRICS.md  TESTING.md  UNIVERSAL_IO_USAGE_EXAMPLES.md  VECTOR_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_USAGE_EXAMPLES.md  app.py  border_latest.json  cli_demo.py  detailed_bug_report.py  docker-compose.yml  energy_latest.json  mkdocs.yml  (+21 more)
.devcontainer/flight-delay/: devcontainer.json
.github/: project-board-config.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: contributor-journey.yml  showcase-feedback.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  showcase-demo.md  showcase-issue.md
.github/workflows/: ci.yml  docker-deploy.yml  examples.yml  publish.yml  release.yml
SCex1/: COMPLETION_SUMMARY.md  README.md  pyproject.toml
SCex1/data/: sample_customers.json
SCex1/docker/: Dockerfile  docker-compose.yml  nginx.conf
SCex1/docs/: DEPLOYMENT.md  WINDOWS_SETUP.md
SCex1/scripts/: build_docker.sh
SCex1/src/: __init__.py  api.py  main.py  supply_chain_optimizer.py
SCex1/test_output/: optimization_report.json
TEMPLATE/: Dockerfile  README.md  app.py  requirements.txt  test_demo.py
TEMPLATE/static/: script.js  style.css
custom_cache/: http_cache.sqlite
docker/: Dockerfile.base
docs/: README.md  _config.yml  api-reference.md  api-setup-guide.md  developer-all.md  examples.md  index.md  phases-all.md  quickstart.md  real-time-data-guide.md  showcase-documentation.md  troubleshooting-guide.md  user-guide.md
docs/CensusDataAnalysis/: CENSUS_MANUAL_SUMMARY.md  census-analysis-overview.md  complete-example-deployment.md  creating-docker-examples.md  data-integration-architecture.md  demographic-analysis.md  docker-overview.md  index.md  running-census-examples.md  socioeconomic-analysis.md  statistical-framework.md  troubleshooting-guide.md  windows-wsl2-concepts.md  wsl2-ubuntu-setup.md
docs/DataFlow/: DATAFLOW_MANUAL_SUMMARY.md  caching-integration.md  census-data-analysis.md  data-flow-overview.md  data-flow-patterns.md  data-ingestion-pipeline.md  data-reading-pipeline.md  emergency-response-systems.md  enterprise-data-flows.md  environmental-monitoring.md  index.md  logistics-supply-chain.md  performance-optimization.md  processing-pipeline.md  qgis-integration-workflows.md  urban-planning-applications.md  vector-operation-flow.md  visualization-pipeline.md
docs/LogisticsAndSupplyChain/: LOGISTICS_MANUAL_SUMMARY.md  aerospace-defense-logistics.md  analytics-fundamentals.md  api-development.md  automotive-logistics.md  best-practices-guide.md  blockchain-integration.md  capacity-planning.md  complete-logistics-deployment.md  creating-logistics-examples.md  customization-guide.md  data-analysis-workflows.md  data-governance-management.md  data-integration-framework.md  demand-forecasting.md  disruption-response.md  docker-overview-logistics.md  ecommerce-fulfillment.md  emerging-trends.md  energy-utilities-logistics.md  enterprise-integration.md  executive-dashboards.md  facility-location-optimization.md  financial-analysis.md  fleet-management-analytics.md  getting-started-logistics.md  global-supply-chain.md  glossary-terminology.md  healthcare-logistics.md  index.md  inventory-optimization.md  iot-sensor-integration.md  last-mile-delivery.md  machine-learning-applications.md  manufacturing-supply-chains.md  multi-modal-transportation.md  optimization-algorithms.md  performance-analytics.md  pharmaceutical-logistics.md  predictive-analytics.md  (+20 more)
docs/cloud/: README.md
docs/cookbook/: deckgl_visualization_example.md  isochrones_calculation.md  network_analysis_example.md  point_cloud_example.md  sentinel2_ndvi.md  site_selection.md  spatiotemporal_cube_example.md  streaming_kafka_example.md  streaming_mqtt_example.md
docs/deployment/: container-registry-setup.md  docker.md
docs/developer/: architecture.md  (+47 more)
examples/: advanced_testing_demo.py  authentication_demo.py  deployment_demo.py  ml_analytics_demo.py  streaming_demo.py
k8s/: deployment.yaml
labor_force_gap/: README.md
oklahoma_economic_indicators/: DATA_SOURCES.md  QGIS_GUIDE.md  README.md
profile/: README.md
pymapgis/: __init__.py  acs.py  async_processing.py  cache.py  cli.py  plotting.py  serve.py  settings.py  tiger.py
scripts/: setup-deployment.py
showcase-starter/: CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml
showcases/: README.md
showcaseslocal/: README.md
showcaseslocal/copenhagen-transit-now/: Dockerfile  README.md  app.py  pyproject.toml  transit_status_latest.json  transit_worker.py
showcaseslocal/open-food-trucks-now/: Dockerfile  README.md  app.py  food_truck_app.py  food_trucks_latest.json  pyproject.toml  requirements.txt  truck_worker.py
showcaseslocal/open311-pothole-now/: Dockerfile  README.md  app.py  pothole_worker.py  pyproject.toml
tennessee_counties_qgis/: EXAMPLE_SUMMARY.md  README.md  create_qgis_project.py  requirements.txt  tennessee_counties_example.py  test_example.py  test_tennessee_counties.py  test_tennessee_simple.py
tests/: test_advanced_testing.py  test_authentication.py  test_cache.py  test_ci_core.py  test_cli.py  test_end_to_end.py  test_enterprise.py  test_io_comprehensive.py  test_ml_analytics.py  test_network.py  test_pointcloud.py  test_raster.py  test_read.py  test_serve.py  test_settings.py  test_streaming.py  test_vector.py  test_viz.py
(+241 files in other folders)
