[tool.poetry]
name = "scex1-supply-chain-demo"
version = "0.1.0"
description = "Simple Supply Chain Optimization Example using PyMapGIS"
authors = ["Nicholas Karlson <nicholaskarlson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# pymapgis = {path = "../", develop = true}  # For local development
# pymapgis = "^0.3.2"  # Not available on PyPI yet
geopandas = "^1.1"
pandas = "^2.3.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.2"
folium = "^0.14.0"
scikit-learn = "^1.3.0"
plotly = "^5.15.0"
streamlit = "^1.25.0"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
black = "^25.1"
ruff = "^0.11"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scex1-demo = "src.main:main"
