[tool.poetry]
name = "copenhagen-transit-now"
version = "1.0.0"
description = "Copenhagen Transit Now - Real-time Danish public transport with S-train, Metro, and bus integration"
authors = ["PyMapGIS Team <team@pymapgis.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pymapgis/core"
repository = "https://github.com/pymapgis/core"
documentation = "https://pymapgis.org"
keywords = ["copenhagen", "denmark", "s-train", "metro", "bus", "rejseplanen", "real-time", "nordic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
requests = "^2.31.0"
pandas = "^2.1.3"
geopandas = "^0.14.1"
shapely = "^2.0.2"
folium = "^0.15.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
protobuf = "^4.25.1"
gtfs-realtime-bindings = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["copenhagen_transit_now"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "folium.*",
    "matplotlib.*",
    "seaborn.*",
    "gtfs_realtime_bindings.*",
]
ignore_missing_imports = true
