[tool.poetry]
name = "open311-pothole-now"
version = "1.0.0"
description = "San Francisco civic issues tracking using PyMapGIS"
authors = ["PyMapGIS Team <team@pymapgis.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pymapgis/core"
repository = "https://github.com/pymapgis/core"
documentation = "https://github.com/pymapgis/core/tree/main/showcaseslocal/open311-pothole-now"
keywords = ["geospatial", "civic", "open311", "san-francisco", "mapping", "real-time"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pandas = "^2.1.3"
geopandas = "^0.14.1"
requests = "^2.31.0"
matplotlib = "^3.8.2"
fiona = "^1.9.5"
shapely = "^2.0.2"
pyproj = "^3.6.1"
python-dotenv = "^1.0.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
